# simple-system-control

./: LICENSE  README.md  simple_system.m  simple_system_sim.slx
system_bringup/: CMakeLists.txt  package.xml
system_bringup/launch/: control_simulate.launch.py  display.launch.py  simulate.launch.py
system_command_interface/: CMakeLists.txt  package.xml
system_command_interface/include/system_command_interface/: system_command_interface.hpp
system_command_interface/src/: system_command_interface.cpp
system_control/: CMakeLists.txt  data_record.csv  package.xml
system_control/config/: system_controller.yaml
system_control/include/system_control/: system_control.hpp
system_control/script/: plot_result.py
system_control/src/: system_control.cpp
system_description/: CMakeLists.txt  package.xml  system_control_parameter.hpp
system_description/rviz/: system_rviz.rviz
system_description/urdf/: inertia_macros.urdf  simple_system.xacro  simple_system_gazebo.urdf  simple_system_parts.urdf  simple_system_ros2_control.urdf  simple_system_transmission.urdf
